0.19.3-2024-07-14:
    espnowdrv.py: send(...,broadcast=True); if false will send the mesdsage individually to each in espnow.get_peers()

0.19.2-2024-07-13:
    espnowdrv.py: send with sync when  mac None

0.19.1-2024-07-12:
    espnowdrv.py:
        - onrcvcbk: while enow.any()

0.19-2024-07-12:
    espnowdrv.py:
        - onrcvcbk and run: irecv(-1) set timeout to wait forever
        - send(None, msg): set mac to None (when not provided) so the message will be sent to all registered peers
    clients/mqtt2.html:
        - added bootstrap.js
            TODO:
                - add to mqhomeAdmin / Android
                - further improve UI with it
0.18-2024-02-23:
    espnowdrv.py:
        - message and rawMessage called with "source" and "message" arguments
        - rawMessage "message" argument is coded 
        - send() - added @peripheral._trigger decorator TESTED with S3 fuseEspnow script

0.17.4-2024-02-18
    conf.py: runModes add single/off and blerepl/off

0.17.3-2024-02-13
    mcu2: added blerepl/off

0.17.1-2024-02-13
    imu9250: declination and calibrate in init Options

0.17.0-2024-02-13
    imu9250:
        - first functional version of mpu 9250 implementation
        - calibration functional
        - fuseUpdateTime saved as json in config file
        - init Timer is used for calibration and later to update Fusion;
        = TODO: declination and update in init Options

0.16.3-2024-02-11
    mpu6050: roll, pitch, yaw read self.imu.accel.xyz if no parameters are given
    
0.16-2023-11-30
    mqttht mqtta and mqtt.py: fixed mqtt bug in mqttht mqtta si mqtt - list assignment rawMessagePosArgs.append(msgjs) not [2]
    jsu.py: added animation condition value evaluation with context dev[] context[] pargs[] and kargs[] 

0.15.4-2023-09-10
    fixed sending manufacturer id in ble advertising package
    
0.15.2-2023-09-07
    main.py: loads blereplr when apl.json does not exists
    blerepl.py: renamed to blereplr.py

0.15.1-2023-09-01